# Test-task-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  task.md
src/: .env example  celerybeat-schedule  manage.py  pyproject.toml
src/app_event/: admin.py  api.py  apps.py  domain.py  models.py  schema.py  service.py  signals.py  task.py  xlsx.py
src/app_event/migrations/: 0001_initial.py
src/app_event/templates/app_event/email/: new_event.html
src/app_event_place/: admin.py  api.py  apps.py  domain.py  models.py  schema.py
src/app_event_place/migrations/: 0001_initial.py
src/app_weather/: domain.py  models.py  schema.py  task.py
src/app_weather/migrations/: 0001_initial.py
src/proj/: api.py  celery.py  urls.py
src/settings/: base.py  local.py
src/tests/: conftest.py  settings_test.py  test_auth.py  test_healthcheck.py
src/tests/data/: events.xlsx
src/tests/test_event/: test_create.py  test_delete.py  test_export_xlsx.py  test_get.py  test_image.py  test_import_xlsx.py  test_list.py  test_update.py
src/tests/test_event_place/: test_create.py  test_delete.py  test_get.py  test_list.py  test_update.py
