[project]
name = "testovoe"
version = "0.1.0"
description = "Тестовое задание"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django<6",
    "django-environ==0.12.0",
    "django-imagekit==6.0.0",
    "django-jazzmin==3.0.2",
    "django-ninja==1.5.3",
    "pillow==12.1.1",
    "psycopg2-binary==2.9.9",
]
